<resources>
    <string name="app_name">AndroidFinal</string>

    <string name="add_to_faveFood">Add to Favourite</string>
    <string name="cancel_faveFood">Cancel</string>
    <string name="delete">Delete</string>
    
    <string name="search_food">Search</string>
    <string name="foodName">Food Name</string>
    <string name="calorie">Calories</string>
    <string name="protein">Proteins</string>
    <string name="fat">Fat</string>

    <string name="help">Help</string>
    <string name="maxCalorie">Max Calorie</string>
    <string name="averageCalorie">Average Calorie</string>
    <string name="minCalorie">Min Calorie</string>

    <string name="howToNavigate">How to Navigate</string>
    <string name="useToolBar">Use toolbar icons to navigate</string>
    <string name="likeTheApp">Like the app? Submit comment below</string>
    <string name="typeHere">Type here</string>
    <string name="ok">OK</string>

    <string name="food">Food Nutrition</string>

    <string name="articleCount">Article Count</string>
    <string name="maxWord">Max Word Count</string>
    <string name="averageWord">Average Word Count</string>
    <string name="minWord">Min Word Count</string>
    <string name="backToNews">Back to news</string>

      <!--********** Movie Main **************-->


    <string name="ListLabel">Movies Listed:</string>
    <!-- ******** Details Page ************ -->
    <string name="MovieTitle">Title: \n   </string>
    <string name="MovieReleased">Released:\n  </string>
    <string name="MovieMetascore">Metascore: \n   </string>
    <string name="imdbId">IMDB Id:\n  </string>
    <string name="imdbRating"> Rating: \n </string>
    <string name="imdbVotes"> Votes: \n   </string>
    <string name="MovieRuntime">Runtime: \n   </string>
    <string name="Director">Director: \n  </string>
    <string name="MovieGenre">Genre: \n   </string>
    <string name="MovieRated">Rated:  \n  </string>
    <string name="MovieLanguage">Language: \n </string>
    <string name="MovieCountry">Country: \n   </string>
    <string name="MovieType">Type: \n </string>
    <string name="MovieWriter">Writer: \n </string>
    <string name="MoviePlot">Plot: \n </string>
    <string name="MovieActors">Actors: \n </string>
    <string name="MovieAwards">Awards: \n </string>


    <!--********** Movie Stats **************-->
    <string name="MovieDino">Movie Dino Brings Statistics! </string>
    <string name="LongestMovie"> Longest Movie </string>
    <string name="ShortestMovie">Shortest Movie</string>
    <string name="MovieAvg"> Average Length</string>
    <string name="Oldest"> Oldest Movie </string>
    <string name="Newest">Newest Movie </string>
    <string name="MovieAvgR">Average Release</string>




************ Added for Debug   *****************

    <string name="help">help</string>
<string name="articleCount">articleCount</string>
    <string name="maxWord">maxWord</string>
<string name="averageWord">averageWord</string>
    <string name="minWord">minWord</string>
<string name="backToNews">backToNews</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="cancel_faveFood">Cancel</string>
    <string name="delete">Delete</string>
    <string name="foodName">foodName</string>
    <string name="calorie">calorie</string>
    <string name="protein">protein</string>
    <string name="fat">fat</string>
    <string name="add_to_faveFood">Save</string>

    <string name="maxCalorie">maxCalorie</string>
    <string name="averageCalorie">averageCalorie</string>
    <string name="minCalorie">minCalorie</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

============ fr-rCA

<resources>
    <string name="app_name">AndroidFinal</string>


    <!--********** Movie Main **************-->


    <string name="ListLabel">
Films énumérés:</string>
    <!-- ******** Details Page ************ -->
    <string name="MovieTitle">Titre: \n   </string>
    <string name="MovieReleased">Libéré:\n  </string>
    <string name="MovieMetascore">Metascore: \n   </string>
    <string name="imdbId">IMDB Id:\n  </string>
    <string name="imdbRating"> Évaluation: \n </string>
    <string name="imdbVotes"> Votes: \n   </string>
    <string name="MovieRuntime">Temps d\'exécution: \n   </string>
    <string name="Director">Réalisateur: \n  </string>
    <string name="MovieGenre">Genre: \n   </string>
    <string name="MovieRated">Classé:  \n  </string>
    <string name="MovieLanguage">
La langue: \n </string>
    <string name="MovieCountry">
Pays: \n   </string>
    <string name="MovieType">Type: \n </string>
    <string name="MovieWriter">Écrivain: \n </string>
    <string name="MoviePlot">Terrain: \n </string>
    <string name="MovieActors">Acteurs: \n </string>
    <string name="MovieAwards">Prix: \n </string>


    <!--********** Movie Stats **************-->
    <string name="MovieDino">
Movie Dino apporte des statistiques! </string>
    <string name="LongestMovie">
Le plus long film </string>
    <string name="ShortestMovie">
Plus court film</string>
    <string name="MovieAvg"> Longueur moyenne</string>
    <string name="Oldest"> Plus vieux film </string>
    <string name="Newest">Nouveau film </string>
    <string name="MovieAvgR">Libération moyenne</string>




    ************** Added for Debug ****************
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="cancel_faveFood">Cancel</string>
    <string name="delete">Delete</string>
    <string name="foodName">foodName</string>
    <string name="calorie">calorie</string>
    <string name="protein">protein</string>
    <string name="fat">fat</string>
    <string name="add_to_faveFood">Save</string>

    <string name="help">help</string>
    <string name="articleCount">articleCount</string>
    <string name="maxWord">maxWord</string>
    <string name="averageWord">averageWord</string>
    <string name="minWord">minWord</string>
    <string name="backToNews">backToNews</string>
    <string name="maxCalorie">maxCalorie</string>
    <string name="averageCalorie">averageCalorie</string>
    <string name="minCalorie">minCalorie</string>

</resources>
