<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action21"
        android:title="Food Portal"
        android:icon="@drawable/ball"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action22"
        android:title="OCTranspo"
        android:icon="@drawable/car"
        android:orderInCategory="105"
        app:showAsAction="always" />

    <item android:id="@+id/action23"
        android:title="Movie Portal"
        android:icon="@drawable/city"
        android:orderInCategory="110"
        app:showAsAction="always" />
    <item android:id="@+id/action24"
        android:title="@string/help"
        android:icon="@drawable/gas"
        android:orderInCategory="120"
        app:showAsAction="never" />
    <item android:id="@+id/action25"
        android:title="@string/articleCount"
        android:icon="@drawable/gas"
        android:orderInCategory="120"
        app:showAsAction="never" />
    <item android:id="@+id/action26"
        android:title="@string/maxWord"
        android:icon="@drawable/gas"
        android:orderInCategory="120"
        app:showAsAction="never" />
    <item android:id="@+id/action27"
        android:title="@string/averageWord"
        android:icon="@drawable/gas"
        android:orderInCategory="120"
        app:showAsAction="never" />
    <item android:id="@+id/action28"
        android:title="@string/minWord"
        android:icon="@drawable/gas"
        android:orderInCategory="120"
        app:showAsAction="never" />
    <item android:id="@+id/action29"
        android:title="@string/backToNews"
        android:icon="@drawable/gas"
        android:orderInCategory="120"
        app:showAsAction="never" />
</menu>