<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ball"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useToolBar"
        android:gravity="center"/>


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/likeTheApp"
    android:gravity="center"/>
<EditText
    android:id="@+id/commenField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/typeHere"/>

</LinearLayout>