<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodNameDetail"
        android:text="@string/hello_blank_fragment"
        android:gravity="center"/>
    <TextView
        android:layout_below="@+id/foodNameDetail"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodCalorieDetail"
        android:text="Calorie here"
        android:gravity="center"/>
    <TextView
        android:layout_below="@+id/foodCalorieDetail"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodProteinDetail"
        android:text="Protein here"
        android:gravity="center"/>
    <TextView
        android:layout_below="@+id/foodProteinDetail"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodFatDetail"
        android:text="Protein here"
        android:gravity="center"/>
    <TextView
        android:layout_below="@+id/foodFatDetail"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/foodIdDetail"
        android:text="ID here"
        android:gravity="center"/>
    <Button
        android:layout_above="@+id/deleteFoodBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_faveFood"
        android:id="@+id/cancelDelBtn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/deleteFoodBtn"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>